// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateFileController should validate request before calling use case 1`] = `
[Error: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "_id"
    ]
  }
]]
`;

exports[`UpdateFileController should validate request before calling use case 2`] = `
[Error: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "originalname"
    ]
  },
  {
    "code": "too_small",
    "minimum": 3,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 3 character(s)",
    "path": [
      "language"
    ]
  }
]]
`;

exports[`UpdateFileController should validate request before calling use case 3`] = `
[Error: [
  {
    "validation": "url",
    "code": "invalid_string",
    "message": "Invalid url",
    "path": [
      "url"
    ]
  }
]]
`;
